React: Fixes the overflow problem on phone screens

--- a/frontend/src/assets/pages/company/company.scss
+++ b/frontend/src/assets/pages/company/company.scss
@@ -75,3 +75,9 @@
     }
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .company-container__body__header__img {
+    display: none;
+  }
+}
